# idesk

./: .gitignore  Cargo.toml  README.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
crates/remote_desktop_core/: Cargo.toml
crates/remote_desktop_core/src/: error.rs  lib.rs
crates/remote_desktop_core/src/capture/: capturer.rs  factory.rs  frame.rs  mock_capturer.rs  mod.rs  pipewire_capturer.rs  scap_capturer.rs  x11_capturer.rs
crates/remote_desktop_core/src/connection/: auth.rs  id.rs  mod.rs
crates/remote_desktop_core/src/encode/: encoder.rs  ffmpeg_encoder.rs  mod.rs  openh264_encoder.rs
crates/remote_desktop_core/src/input/: clipboard.rs  enigo_injector.rs  events.rs  injector.rs  mod.rs
crates/remote_desktop_core/src/network/: ice.rs  mod.rs  signaling.rs  webrtc_peer.rs
crates/remote_desktop_core/src/stream/: mod.rs  pipeline.rs  rate_control.rs
crates/signaling_server/: Cargo.toml
crates/signaling_server/src/: main.rs  messages.rs  registry.rs  server.rs  ws_handler.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: connection.rs  mod.rs  settings.rs
src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
src/components/: ConnectionScreen.tsx  RemoteDesktopView.tsx
src/styles/: globals.css
