[package]
name = "remote-desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
remote_desktop_core = { path = "../crates/remote_desktop_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
