[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
actix-web = "4"
actix-ws = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
